fix dropdown, background position for portal wrapper nav in smaller browser size

--- a/portal/static/less/topnav.less
+++ b/portal/static/less/topnav.less
@@ -115,7 +115,6 @@
   max-width: 100%;
   background-color: #171c20;
   background-image: url('../img/header_background.jpg');
-  background-size: auto 81px;
   background-repeat: no-repeat;
   padding: 10px 15px;
   z-index: 1000;
@@ -371,7 +370,7 @@ padding: 0 6px;
   display: none;
 }
 .tnth-navbar-xs {
-  margin: 7.5px -15px;
+  margin: 42px -15px 7.5px;
   padding-left: 0;
   list-style: none;
   > li {
