TN-536 - UI display changes  for re-consent terms

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -629,6 +629,11 @@ div.footer-wrapper.right-panel {
     font-weight: normal;
     text-decoration: underline;
   }
+  #termsCheckbox[data-reconsent] {
+    label.terms-label[data-agree='true'] {
+      display: none !important;
+    }
+  }
 }
 .terms-tick-box {
   float: left;
