TN-536 Add notification json and scheduled task job for website reconsent

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -534,17 +534,20 @@ select:not([multiple]) {
   padding: 0;
   color: #FFF;
   .content {
-    width: 500px;
+    width: 600px;
     max-width: 100%;
     background-color: @notificationBgColor;
     margin: auto;
-    text-align: center;
+    letter-spacing: 1px;
   }
   .fa-info-circle {
     margin-right: 4px;
   }
   .notification-info {
     cursor: pointer;
+    width: 500px;
+    max-width: 100%;
+    margin: auto;
     letter-spacing: 1px;
     &:hover {
       color: @linkHover;
