TN-536 website terms reconsent fixes

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -558,7 +558,9 @@ select:not([multiple]) {
     max-width: 100%;
     padding: 2px;
     p {
-      margin: 0;
+      margin: 0.1em auto;
+      border-bottom: 1px solid #7777;
+      padding: 0.1em;
     }
   }
   .notification.active {
