--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -527,18 +527,19 @@ select:not([multiple]) {
   display: none;
   position: absolute;
   left: 0;
-  z-index: 2000;
+  z-index: 1000;
   background-color: @notificationBgColor;
   box-shadow: 0 2px 2px rgba(0,0,0,0.2);
   right: 0;
   padding: 0;
   color: #FFF;
   .content {
-    width: 600px;
+    width: 650px;
     max-width: 100%;
     background-color: @notificationBgColor;
     margin: auto;
     letter-spacing: 1px;
+    text-align: center;
   }
   .fa-info-circle {
     margin-right: 4px;
