TN-531 follow-up fix - point start buttons to registration model

--- a/portal/exercise_diet/templates/exercise_diet/exercise-diet_portal.html
+++ b/portal/exercise_diet/templates/exercise_diet/exercise-diet_portal.html
@@ -17,7 +17,7 @@
 						<li>{{_("Making exercise fun, safe and worth it")}}</li>
 						<li>{{_("Delicious recipes and quick grocery shopping tips")}}</li>
 					</ul>
-					<div class="start-button-intro" data-toggle="modal" data-target="#modal-login">{% trans %}start <span>&rarr;</span>{% endtrans %}</div>
+					<div class="start-button-intro" data-toggle="modal" data-target="#modal-register">{% trans %}start <span>&rarr;</span>{% endtrans %}</div>
 			</div><!-- end class="intro-content" -->
 		</div><!-- end class="intro-module intro-intro" -->
 		<div class="video-module video-testimonial-hero" style="background-image: url({{ url_for('.static', filename='img//video-testimonial-hero.jpg') }})">
@@ -39,7 +39,7 @@
 					<h5>{{_("EXERCISE AND DIET")}}</h5>
 					<h6><span>{{_("EXERCISE / DIET / RECIPES")}}</span></h6>
 					</div>
-					<span class="toolbox-start-button" data-toggle="modal" data-target="#modal-login">{% trans %}start &rarr;{% endtrans %}</span>
+					<span class="toolbox-start-button" data-toggle="modal" data-target="#modal-register">{% trans %}start &rarr;{% endtrans %}</span>
 				</div>
 			</div><!-- end class="objective-content" -->
 		</div><!-- end class="objective-module objective-background" -->
