--- a/portal/exercise_diet/static/css/styles.css
+++ b/portal/exercise_diet/static/css/styles.css
@@ -15,6 +15,29 @@
     min-height: 20px;
 }
 
+body.page-exercise-diet-portal footer {
+    position: absolute;
+    top: 2297px;
+    margin: 0 1.31em;
+}
+@media (min-width: 401px) {
+    body.page-exercise-diet-portal footer {
+        top: 2247px;
+        margin: 0 1.35em;
+    }
+}
+@media (min-width: 768px) {
+    body.page-exercise-diet-portal footer {
+        top: 2290px;
+    }
+}
+
+@media (min-width: 900px) {
+    body.page-exercise-diet-portal footer {
+        margin: 0 2em;
+    }
+}
+
 #Exercise-Diet-Portal {
 	position: relative;
 	display: block;
@@ -62,38 +85,11 @@
     }
 }
 #Exercise-Diet-Portal .intro-content,
-#Exercise-Diet-Portal .objective-content,
-#Exercise-Diet-Portal .video-content
+#Exercise-Diet-Portal .objective-content
  {
     width: 780px;
     max-width: 100%;
     padding: 1em;
-}
-#Exercise-Diet-Portal .video-content iframe {
-    max-width: 100%;
-    width: 260px;
-    height: 100%;
-    position: relative;
-    top: 10em;
-}
-@media (min-width: 431px) {
-    #Exercise-Diet-Portal .video-content iframe {
-        width: 390px;
-        height: 222px;
-        top: 2em;
-    }
-}
-@media (min-width: 520px) {
-    #Exercise-Diet-Portal .video-content iframe {
-        width: 479px;
-        height: 272px;
-    }
-}
-@media (min-width: 669px) {
-    #Exercise-Diet-Portal .video-content iframe {
-        width: 630px;
-        height: 354px;
-    }
 }
 
 #Exercise-Diet-Portal .intro-content {
@@ -160,9 +156,8 @@ hr.objective {
     width: 250px;
     margin-top: 40px;
     cursor: pointer;
-
     position: absolute;
-    top: 75%;
+    top: 60%;
     left: 50%;
     margin-left: -109px;
     margin-top: 0.5em;
@@ -356,6 +351,30 @@ img.objective-background  {
 */
     height: 600px;
     top: 700px;
+    background-position: top center;
+}
+
+.video-module iframe {
+    width: 380px;
+    height: 214px;
+    margin: auto;
+    position: relative;
+    top: 32%;
+    z-index: 2;
+}
+@media (min-width: 643px) {
+    .video-module iframe {
+        width: 610px;
+        height: 343px;
+        top: 22%;
+    }
+}
+@media (min-width: 912px) {
+    .video-module iframe {
+        width: 810px;
+        height: 456px;
+        top: 12%;
+    }
 }
 
 img.video-testimonial-hero {
@@ -364,6 +383,11 @@ img.video-testimonial-hero {
     position: relative;
     max-width: 100%;
     vertical-align: middle;
+}
+@media (min-width: 1100px) {
+    .video-module.video-testimonial-hero {
+        background-position: 100%;
+    }
 }
 
 .objective-module.objective-background  {
