--- a/portal/exercise_diet/templates/exercise_diet/exercise-diet_portal.html
+++ b/portal/exercise_diet/templates/exercise_diet/exercise-diet_portal.html
@@ -21,9 +21,9 @@
 			</div><!-- end class="intro-content" -->
 		</div><!-- end class="intro-module intro-intro" -->
 		<div class="video-module video-testimonial-hero" style="background-image: url({{ url_for('.static', filename='img//video-testimonial-hero.jpg') }})" data-iframe-src="//videos.sproutvideo.com/embed/e89adcb2181fe6cb60/0b1c2437f243294d?type=hd&amp;autoPlay=true">
+			<img src="{{url_for('.static', filename='img//video-testimonial-hero.jpg')}}">
 			<div class="watch-button-video">{{_("watch")}}</div>
 		</div><!-- end class="video-module video-testimonial-hero" -->
-
 		<div class="objective-module objective-background" style="background-image: url({{ url_for('.static', filename='img//objective-background.jpg') }})">
 			<div class="objective-content">
 				<h6 class="accent-heading">{% trans %}Objective N<em>o</em>&nbsp;6: CUSTOM TOOLS &mdash; EXERCISE AND DIET{% endtrans %}</h6>
