--- a/portal/exercise_diet/templates/exercise_diet/exercise-diet_portal.html
+++ b/portal/exercise_diet/templates/exercise_diet/exercise-diet_portal.html
@@ -17,7 +17,11 @@
 						<li>{{_("Making exercise fun, safe and worth it")}}</li>
 						<li>{{_("Delicious recipes and quick grocery shopping tips")}}</li>
 					</ul>
-					<div class="start-button-intro" data-toggle="modal" data-target="#modal-register">{% trans %}start <span>&rarr;</span>{% endtrans %}</div>
+					{% if not user %}
+						<div class="start-button-intro" data-toggle="modal" data-target="#modal-register">{% trans %}start <span>&rarr;</span>{% endtrans %}</div>
+					{% else %}
+						<a href="{{url_for('exercise_diet.introduction')}}" class="exercise_diet-link community_of_wellness-link"><div class="start-button-intro">{% trans %}start <span>&rarr;</span>{% endtrans %}</div></a>
+					{% endif %}
 			</div><!-- end class="intro-content" -->
 		</div><!-- end class="intro-module intro-intro" -->
 		<div class="video-module video-testimonial-hero" style="background-image: url({{ url_for('.static', filename='img//video-testimonial-hero.jpg') }})" data-iframe-src="//videos.sproutvideo.com/embed/e89adcb2181fe6cb60/0b1c2437f243294d?type=hd&amp;autoPlay=true">
@@ -36,7 +40,11 @@
 					<h5>{{_("EXERCISE AND DIET")}}</h5>
 					<h6><span>{{_("EXERCISE / DIET / RECIPES")}}</span></h6>
 					</div>
-					<span class="toolbox-start-button" data-toggle="modal" data-target="#modal-register">{% trans %}start &rarr;{% endtrans %}</span>
+					{% if not user %}
+						<span class="toolbox-start-button" data-toggle="modal" data-target="#modal-register">{% trans %}start &rarr;{% endtrans %}</span>
+					{% else %}
+						<a href="{{url_for('exercise_diet.introduction')}}" class="exercise_diet-link community_of_wellness-link"><span class="toolbox-start-button">{% trans %}start &rarr;{% endtrans %}</span></a>
+					{% endif %}
 				</div>
 			</div><!-- end class="objective-content" -->
 		</div><!-- end class="objective-module objective-background" -->
