--- a/portal/templates/sessionReport.html
+++ b/portal/templates/sessionReport.html
@@ -8,7 +8,16 @@
 	<h4 class="text-muted">{{ _("Patient") }} #{{user.id}} - {{user.first_name}}  {{user.last_name}}</h4>
 	</span>
 	<span class="right">
-		<a href="{%if current_user.has_role(ROLE.STAFF)%}{{url_for('patients.patient_profile', patient_id=user.id) }}{%else%}{{url_for('portal.profile', user_id=user.id)}}{%endif%}" data-toggle="tooltip" data-placement="top" title="{{ _('Back to Patient Profile') }}" class="btn"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></a>&nbsp;&nbsp;<a href="{{PORTAL}}/home" data-toggle="tooltip" data-placement="top" title="{{ _('Back to Truenth Home') }}" class="btn"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a>
+		{% if current_user.id == user.id %}
+		<a href="{{url_for('portal.profile')}}" data-toggle="tooltip" data-placement="top" title="{{ _('Back to Profile') }}" class="btn"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></a>
+		{% else %}
+			{% if current_user.has_role(ROLE.STAFF) %}
+				<a href="{{url_for('patients.patient_profile', patient_id=user.id) }}" data-toggle="tooltip" data-placement="top" title="{{ _('Back to Patient Profile') }}" class="btn"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></a>
+			{% else %}
+				<a href="{{url_for('portal.profile', user_id=user.id)}}" data-toggle="tooltip" data-placement="top" title="{{ _('Back to User Profile') }}" class="btn"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></a>
+			{% endif %}
+		{% endif %}
+		&nbsp;&nbsp;<a href="{{PORTAL}}/home" data-toggle="tooltip" data-placement="top" title="{{ _('Back to Truenth Home') }}" class="btn"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a>
 	</span>
 
 </div>
